@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2023-06-20 20:01:57+01:00 - build 6166
+
+1. Configurable cursor size in screen grabber.
+
+--------------------------------------------------------------------------------
 johnd0e 2023-06-17 14:55:00+01:00 - build 6165
 
 1. Allow to break directory scan started from a macro (Mantis#0002692).
